# nexus_config

./: .gitmodules  CMakeLists.txt  README.md  nexus_basic.yaml  package.xml  setup.sh
docker/: bashrc-setup-host.sh  build-nexus.bash  nexus-config_ros1.env  nexus-config_ros2.env
docker/nexus-cetc-focal-ros1/: compose.yml  setup.sh
docker/nexus-cetc-focal-ros1-xeno/: compose.yml
docker/nexus-cetc-noble-ros2/: compose.yml  setup.sh
docker/nexus-cetc-noble-ros2-xeno/: compose.yml
docker/nexus-focal-ros1/: compose.yml  setup.sh
docker/nexus-focal-ros1-xeno/: compose.yml  setup.sh
docker/nexus-noble-ros2/: compose.yml  setup.sh
docker/nexus-noble-ros2-xeno/: compose.yml
docker/nexus-ros2-noble-ros2/: compose.yml
docker/nexus-ros2-noble-ros2-xeno/: compose.yml
gui/: gui_server_config.yaml  nexus_launcher.bash  nexus_launcher_config.yaml
gui/ros1/: gui_server_config.yaml  nexus_launcher_config.yaml
gui/ros2/: nexus_launcher.bash  nexus_launcher_config.yaml
hal/: nexus_ec_all.yaml
launcher/: nexus_launcher.bash  nexus_launcher_config.yaml
xbot2/: nexus_basic_ros1.yaml  nexus_basic_ros2.yaml
